--- a/consumer/build.gradle
+++ b/consumer/build.gradle
@@ -1,30 +1,25 @@
-apply plugin: 'java'
+plugins {
+    id 'java'
+    id 'maven-publish'
+    id 'com.sri.gradle.daikon' version '0.0.1-SNAPSHOT'
+}
 
-buildscript {
-    dependencies {
-        classpath 'com.sri.gradle:daikon-gradle-plugin:1.0'
+repositories {
+    mavenLocal()
+    mavenCentral()
+    maven {
+        url 'https://plugins.gradle.org/m2/'
     }
 }
 
-// tag::apply-configure-plugin[]
-apply plugin: 'com.sri.gradle.daikon'
+dependencies {
+    implementation 'com.google.guava:guava:28.0-jre'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation 'junit:junit:4.13'
+}
 
 runDaikon {
     neededlibs = file("libs")
     outputdir = file("${projectDir}/build/daikon-output")
     driverpackage = "com.foo"
 }
-
-allprojects {
-    repositories {
-        jcenter()
-    }
-}
-
-dependencies {
-    testImplementation 'org.hamcrest:hamcrest:2.2'
-    testImplementation 'junit:junit:4.12'
-}
-
-// end::apply-configure-plugin[]
-
