performs code cleanup, refactors of sri.gradle.internal classes, and updates the README.md of this project

--- a/consumer/build.gradle
+++ b/consumer/build.gradle
@@ -20,6 +20,6 @@ dependencies {
 
 runDaikon {
     requires = file("libs")
-    outputdir = file("${projectDir}/build/daikon-output")
-    testdriverpack = "com.foo"
+    outputDir = file("${projectDir}/build/daikon-output")
+    testDriverPackage = "com.foo"
 }
