Allows Daikon to be run on Projects that lack a TestDriver class (with a static void main method) (#6)
* It adds the ability to generate a TestDriver class (See Readme.md for configuration details). The Options repository does not have a TestDriver. With this update, we will be able to apply the Daikon plugin to that project.

* makes `generateTestDriver` an optional Plugin statement

* Adds the ability to generate test driver class

* makes generateTestDriver optional

* code cleanup

* Hooks the generation and compilation of the test driver into the Gradle build process.

* formats code according to google-java-format

* adding `throw new Error("Cannot be instantiated");` to the constructor of utility classes

* re-organizes code

* updates .gitignore

* changes InputProvider's constructor signature, makes outputDir writable

* setting outputDir permissions

* removes test driver class from Daikon command's input. Performs code cleanup. Moves RuntimeClasspath's helper method to JavaProjectHelper.

* fixes Daikon program. The Daikon plugin can now generate a test driver capable of generating the *.inv.gz, *.decls-DynComp, and *.dtrace.gz files.

* code cleanup and re-organization

* re-organizes internal code

* makes Command's working directory a required arg

* removes unnecessary dependency

* removes unnecessary code

* removes unnecessary code

--- a/consumer/build.gradle
+++ b/consumer/build.gradle
@@ -22,4 +22,5 @@ runDaikon {
     requires = file("libs")
     outputDir = file("${projectDir}/build/daikon-output")
     testDriverPackage = "com.foo"
+    generateTestDriver = false
 }
