--- a/consumer/build.gradle
+++ b/consumer/build.gradle
@@ -18,6 +18,10 @@ dependencies {
     testImplementation 'junit:junit:4.13'
 }
 
+tasks.withType(Javadoc){
+    enabled = false
+}
+
 runDaikon {
     requires = file("libs")
     outputDir = file("${projectDir}/build/daikon-output")
