--- a/gradle/compile.gradle
+++ b/gradle/compile.gradle
@@ -3,6 +3,10 @@ java {
     targetCompatibility JavaVersion.VERSION_1_8
 }
 
+tasks.withType(Javadoc){
+    enabled = false
+}
+
 tasks.withType(JavaCompile) {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
