--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ gradlePlugin {
 dependencies {
     implementation gradleApi()
     implementation 'com.google.guava:guava:28.0-jre'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation 'junit:junit:4.13'
